# chromadb-demo

./: .env.example  .gitignore  CHROMADB_API_INVESTIGATION.md  Cargo.toml  FINAL_SOLUTION_SUMMARY.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  TODO.md  docker-compose.yml
examples/: advanced_usage.rs  official_chromadb.rs  production_ready.rs  simple_demo.rs  working_with_official.rs
scripts/: setup.sh  test-all.sh
src/: chroma_client.rs  chroma_official.rs  embeddings.rs  error.rs  lib.rs  main.rs  models.rs
